# Alice

./: .gitignore  30-DAY-PLAN.md  AUDIT.md  AVATAR.md  BATCH_3_AUDIT.md  BLACKBOX_README.md  BOB.md  CLAUDE.EXAMPLE.md  CLAUDE.md  EMPTY.md  FIXED_ROADMAP.md  GAME_THEORY.md  GHOST.md  GHOST_HANDOFF.md  GOTCHAS.md  HANDOFF.md  HANDOFF_2026-04-24.md  HANDOFF_2026-04-27.md  HIDDEN_UPSIDE.md  METHODS_PROVENANCE.md  MORE_JUICE.md  PHASE6_RESUME.md  README.md  RESUME.md  ROADMAP.md  SYSTEM.md  TEMP.md  a  alice-session-close.html  alice-signals.linux-x64-gnu.node  alice_bob_sketch.md  alice_handoff.md  astro.config.mjs  baseline-calibration-research.md  dbEXAMPLE_Tables.sql  handoff-audit-20260419.md  handoff.md  issue-3-findings.md  m  marrow_einstein_sketch.md  (+8 more)
deploy/: Caddyfile  HETZNER_SSH.md  README.md  RUNBOOK_migration_030.md  alice.service  deploy.sh  run-migration.sh  secrets.env.example
docs/: ALICE_PROVENANCE_NEW_PATHS.md  HANDOFF-signal-integration-2026-04-24.md  THEORY_SELECTION.md  consent-v1.md  contamination-boundary-v1.md  design-residual-reproducibility.md  embedding-methods.md  security-posture-2026-04-28.md
log/: why-rust.md
marketing/: README.md
moreJuice/: MORE_JUICE.md  MORE_JUICE_RUST.md  MORE_JUICE_SIGNALS.md
papers/: citations.md  (+18 more)
src-rs/: Cargo.toml  REPRODUCIBILITY.md  build.sh  index.d.ts  package.json  reproducibility-check.sh  rust-toolchain.toml
src-rs/scripts/: generate-dts.mjs
src-rs/src/: avatar.rs  dynamical.rs  lib.rs  motor.rs  process.rs  stats.rs  types.rs
src-rs/tests/: avatar_reproducibility.rs  reproducibility.rs
(+508 files in other folders)
